add minlength and  maxlength

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     </head>
     <body>
       <h1>Wordle PPY</h1>
-      <input type="text" id="guess-input" placeholder="ingresa una Palabra" />
+      <input
+        type="text"
+        id="guess-input"
+        placeholder="ingresa una Palabra"
+        maxlength="5"
+        minlength="5"
+      />
       <button id="guess-button">Intentar</button>
       <div id="grid"></div>
       <p id="guesses"></p>
