--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         minlength="5"
       />
       <button id="guess-button">Intentar</button>
-      <div id="grid"></div>
-      <p id="guesses"></p>
+      <div class="container">
+        <div id="grid"></div>
+        <p id="guesses"></p>
+      </div>
     </body>
   </html>
 </html>
